# popgen-oxide

./: Cargo.toml  LICENSE
.github/workflows/: python.yml  test.yml
examples/: allel_.py  concurrent.rs  from_tskit.rs  from_vcf.rs  from_vcf_htlib.rs  from_vcf_htslib.rs  from_vcf_htslib_indexed_parallel.rs  from_vcf_indexed.rs  from_vcf_noodles.rs  from_vcf_noodles_indexed.rs  htslib_parallel.rs  htslib_single.rs  noodles_parallel.rs  simple.vcf  simple.vcf.bgz  simple.vcf.bgz.tbi
popgen/: Cargo.toml
popgen-bin/: Cargo.toml
popgen-bin/src/: main.rs
popgen/src/: adapter.rs  iter.rs  lib.rs  stats.rs  tests.rs
proptest-regressions/testing/: pi.txt  tajimasd.txt
python/integration-tests/: Cargo.toml  pyproject.toml
python/integration-tests/src/: lib.rs
python/integration-tests/tests/: test_diversity.py
src/: adapter.rs  counts.rs  from_tree_sequence.rs  iter.rs  lib.rs  naivecalculations.rs  stats.rs  test.rs  testdata.rs  tests.rs  traits.rs  util.rs
src/testing/: concurrent.rs  diversity.rs  fst.rs  mod.rs  multisitecounts.rs  naivecalculations.rs  noodles_vcf.rs  pi.rs  tajimasd.rs  test.rs  test_try_from_tree_sequence.rs  testdata.rs  wattersons_theta.rs
tests/: naive.rs  naive_stats.rs  test_try_from_tree_sequence.rs
tskit_testing_data/: issue_112.trees
