[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "integration_tests"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
popgen = { version="*", path="../..", features=["tskit"] }
tskit2tskit = { version="0.1.0-alpha.0", git="https://github.com/molpopgen/tskit2tskit", branch="main"}
tskit = "0.16.3"
